<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="one_player">One Player</string>
    <string name="two_players">Two Players</string>
    <string name="choose_difficulty">Choose difficulty:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="end_game">End game</string>
    <string name="player_x_starts">Player X starts</string>
    <string name="it_s_a_tie">It\'s a tie!</string>
    <string name="you_start">You start</string>
    <string name="computer_starts">Computer starts</string>
    <string name="you_won">You won!</string>
    <string name="turn_computer">Turn: Computer</string>
    <string name="the_computer_won">The computer won!</string>
    <string name="turn_your_turn">Turn: Your turn</string>
    <string name="player_x_won">Player X won!</string>
    <string name="turn_player_o">Turn: Player O</string>
    <string name="player_o_won">Player O won!</string>
    <string name="turn_player_x">Turn: Player X</string>
    <string name="new_game">New Game</string>
    <string name="main_menu">Main Menu</string>
    <string name="temp">temp</string>
</resources>