<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:id="@+id/gameOverTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/gameOverButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/menuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textSize="20sp"/>
        

</LinearLayout>