<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/singlePlayerButton"
        android:layout_width="178dp"
        android:layout_height="66dp"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="191dp"
        android:text="@string/one_player"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/playerVsPlayerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/playerVsPlayerButton"
        android:layout_width="178dp"
        android:layout_height="66dp"
        android:layout_marginTop="304dp"
        android:text="@string/two_players"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/difficultyTextView"
        android:layout_width="155dp"
        android:layout_height="29dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="157dp"
        android:text="@string/choose_difficulty"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/playerVsPlayerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singlePlayerButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/difficultyOneButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="76dp"
        android:text="@string/_1"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/playerVsPlayerButton"
        app:layout_constraintEnd_toStartOf="@+id/difficultyTwoButton"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyTextView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/difficultyTwoButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="76dp"
        android:text="@string/_2"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/playerVsPlayerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyTextView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/difficultyThreeButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="76dp"
        android:text="@string/_3"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/playerVsPlayerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toEndOf="@+id/difficultyTwoButton"
        app:layout_constraintTop_toBottomOf="@+id/difficultyTextView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>