<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <Button
        android:id="@+id/button"
        android:layout_width="163dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:text="@string/end_game"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/currentStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:text="@string/player_x_starts"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <LinearLayout
        android:id="@+id/gridContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            
            <ImageView
                android:id="@+id/imageView1"
                android:background="@drawable/blue_grid_box"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:background="@drawable/blue_grid_box"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"/>

            <ImageView
                android:id="@+id/imageView3"
                android:background="@drawable/blue_grid_box"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/imageView4"
                android:background="@drawable/blue_grid_box"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"/>

            <ImageView
                android:id="@+id/imageView5"
                android:background="@drawable/blue_grid_box"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"/>

            <ImageView
                android:id="@+id/imageView6"
                android:background="@drawable/blue_grid_box"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/imageView7"
                android:background="@drawable/blue_grid_box"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"/>

            <ImageView
                android:id="@+id/imageView8"
                android:background="@drawable/blue_grid_box"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"/>

            <ImageView
                android:id="@+id/imageView9"
                android:background="@drawable/blue_grid_box"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:padding="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>